--- a/app/views/getInspired.scala.html
+++ b/app/views/getInspired.scala.html
@@ -1,3 +1,4 @@
+@(images: Map[String,String])
 <!DOCTYPE html>
 <html lang="en">
 <span class="bckg"></span>
@@ -27,32 +28,19 @@
       </div>
    </div>
    
-      <div class="card-deck mt-4 ml-5 mb-4 mr-1">
-         <div class="card mr-5">
-            <div class="text-center mt-4 mb-3">
-               <a href="#"><img src="@routes.Assets.versioned("images/xenia.png")" height="500" width="400"></a>
-            </div> 
-            <div class="card-block">
-               <h4 class="card-title ml-4">Xenia</h4>
+      <div class="row mt-4 ml-5 mb-4 mr-1">
+         @for((name,image) <- images){
+         <div class="col-sm-4 mb-5">
+            <div class="card mr-5">
+               <div class="text-center mt-4 mb-3">
+                  <a href="#"><img src="@routes.Assets.versioned(image)" height="500" width="400"></a>
+               </div> 
+               <div class="card-block">
+                  <h4 class="card-title ml-4">@name</h4>
+               </div>
             </div>
-         </div>
-         <div class="card mr-5">
-            <div class="text-center mt-4 mb-3">
-               <a href="#"><img src="@routes.Assets.versioned("images/andreialbu_.png")"  height="500" width="400"></a>
-
-            </div> 
-            <div class="card-block">
-               <h4 class="card-title ml-4">andreialbu</h4>
-            </div>
-         </div>
-         <div class="card mr-5">
-            <div class="text-center mt-4 mb-3">
-               <a href="#"><img src="@routes.Assets.versioned("images/blogjuniorestevam.png")"  height="500" width="400"></a>
-            </div> 
-            <div class="card-block ">
-               <h4 class="card-title ml-4">blogjuniorestevam</h4>
-            </div>        
-         </div>
+        </div>
+        }
       </div>
    </div>
 
