--- a/app/views/signUpPage.scala.html
+++ b/app/views/signUpPage.scala.html
@@ -28,15 +28,15 @@
 					</div>
 				 </div>	
 				 <h2>Or sign up with</h2>
-				 <form action="@routes.HomeController.approach2("a")">
+				 <form action="@routes.HomeController.signUp("a","b")">
 							<div class="lable">
-		                     	<input type="text" name = "s" class="text" value="UserName" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User Name';}" >
+		                     	<input type="text" name = "name" class="text" value="UserName" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'User Name';}" >
 
 		                     
 		                    </div>
 		                    <div class="clear"> </div>
 		                    <div class="lable-2">
-		                    <input type="text" class="text" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}">
+		                    <input type="text" name = "password" class="text" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}">
 		                   
 							</div>
 							<div class="clear"> </div>
