--- a/app/views/signInPage.scala.html
+++ b/app/views/signInPage.scala.html
@@ -14,7 +14,7 @@
 <div id="mainlogin">
 <div id="or">or</div>
 <h1>Log in with awesome new thing</h1>
-<form action="@routes.HomeController.goMainPage()">
+<form action="@routes.HomeController.signIn("a","b")">
 <input type="text" placeholder="username or email" value="" required>
 <input type="password" placeholder="password" value="" required>
 <button type="submit"><i class="fa fa-arrow-right"></i></button>
