--- a/app/views/signInPage.scala.html
+++ b/app/views/signInPage.scala.html
@@ -15,8 +15,8 @@
 <div id="or">or</div>
 <h1>Log in with awesome new thing</h1>
 <form action="@routes.HomeController.signIn("a","b")">
-<input type="text" placeholder="username or email" value="" required>
-<input type="password" placeholder="password" value="" required>
+<input type="text" name = "name"placeholder="username or email" value="" required>
+<input type="password" name = "password" placeholder="password" value="" required>
 <button type="submit"><i class="fa fa-arrow-right"></i></button>
 </form>
 <div id="note"><a href="#">Forgot your password?</a></div>
