--- a/app/views/detailPage.scala.html
+++ b/app/views/detailPage.scala.html
@@ -44,9 +44,9 @@
 
   <article class="larg">
 
-</form>
+
     <div>
-      <h3><img src="@routes.Assets.versioned("images/2.png")"width="500" height="260">details here</span></h3>
+      <h3><img src="@routes.Assets.versioned("images/2.png")"width="500" height="260">details here/h3>
       <p>xxx.</p>
       </h3>
     </div>
@@ -59,5 +59,6 @@
     </div>
       <div id="login_click">  
         <a id="btlogin" href="#">Cancel</a>  
-    </div>
+      </div>
+  </article>
 </main>
