--- a/app/views/getInspired.scala.html
+++ b/app/views/getInspired.scala.html
@@ -18,7 +18,7 @@
 
   <div class="title">
     <h2>Get Inspired!</h2>
-    <a href="javascript:void(0);">Sign in</a>
+    <a href="javascript:void(0);">Sign out</a>
    </div>
    <div class="container-fluid">
    <div class="card mt-2">
