--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -17,7 +17,7 @@
 <main>
   <div class="title">
     <h2>My Items</h2>
-    <a href="javascript:void(0);">Sign in</a>
+    <a href="javascript:void(0);">Sign out</a>
    </div>
    <div class="container-fluid">
    <div class="container">
@@ -28,11 +28,9 @@
       <div class="input-group stylish-input-group mt-2">
         <input type="search" class="form-control"  placeholder="Search by Item Name" onkeyup="myFunction()" name = "s" required>
         <span class="input-group-addon">
-            <button type="submit">
+            <button type="submit"></button> </span></div>
             </form>
                 <img src="@routes.Assets.versioned("images/search.png")" height="35" width="35">
-            </button>  
-        </span>
       </div>
    </div>
    <div class="card ml-3 mt-3 mr-2">
@@ -107,7 +105,7 @@
          }
         
       </div>
-   </div>
+
 
 </main>
 
