--- a/app/views/myOutfits.scala.html
+++ b/app/views/myOutfits.scala.html
@@ -18,7 +18,7 @@
 
   <div class="title">
     <h2>My Outfits</h2>
-    <a href="javascript:void(0);">Sign in</a>
+    <a href="javascript:void(0);">Sign out</a>
    </div>
    <div class="container-fluid">
    <div class="container">
@@ -29,11 +29,11 @@
       <div class="input-group stylish-input-group mt-2">
         <input type="search" class="form-control"  placeholder="Search by Outfit name" onkeyup="myFunction()" name = "s" required>
         <span class="input-group-addon">
-            <button type="submit">
+            <button type="submit"></button></span></div>
             </form>
                 <img src="@routes.Assets.versioned("images/search.png")" height="35" width="35">
-            </button>  
-        </span>
+
+
       </div>
    </div>
    
@@ -95,7 +95,7 @@
          </div>
          }
       </div>
-   </div>
+
 
 </main>
 
