--- a/app/views/recommend.scala.html
+++ b/app/views/recommend.scala.html
@@ -28,11 +28,11 @@
       <div class="input-group stylish-input-group mt-2">
         <input type="search" class="form-control"  placeholder="Search by Keywords" onkeyup="myFunction()" name = "s" required>
         <span class="input-group-addon">
-            <button type="submit">
+            <button type="submit"></button></span></div>
             </form>
                 <img src="@routes.Assets.versioned("images/search.png")" height="35" width="35">
-            </button>  
-        </span>
+
+
       </div>
    </div>
    
@@ -91,7 +91,7 @@
          </div>
          }
       </div>
-   </div>
+
 
 </main>
 
