Pushing webhose stuff and some css

--- a/app/views/navigator.scala.html
+++ b/app/views/navigator.scala.html
@@ -2,6 +2,9 @@
    
     <ul>
       <li>
+        <a href="@routes.HomeController.goMainPage()" data-title="Projects">Home</a>
+      </li>
+      <li>
         <a href="@routes.HomeController.getInspired()" data-title="Projects">Get Inspired!</a>
       </li>
       <li>
