--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -98,7 +98,7 @@
                <div class="card-block">
                   <h4 class="card-title ml-2">@item.getName()</h4>
                   <div class="mb-2">
-                     <button type="button" class="btn btn-secondary ml-2">Add to Outfit</button>
+                     <a href="@routes.HomeController.addToOutfit(item.getName())" class="btn btn-success float-right mr-2">Add to Outfit</a>
                      <button type="button" class="btn btn-success float-right mr-2" >Save</button>
                   </div>
                </div>
@@ -107,7 +107,7 @@
          }
         
       </div>
-   </div>
+
 
 </main>
 
