--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -38,13 +38,13 @@
       <h2 class="card-text">Click on an icon to start searching for apparel in that category!</h2>
       <h1 class="card-title ">Adding to your Outfit</h1>
       <div class="text-center">
-         <img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/add.jpg")" width="500"></a>
+         <img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/add.jpg")" width="400"></a>
       </div>
       <h2 class="card-text">The Add to Outfit button adds the Item to your custom silhouette in the sidebar</h2>
             <div class="text-center">
-         <img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/help.png")" width="150"></a>
+         <img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/help.png")" width="120"></a>
       </div>
-      <h2 class="card-text">The Save button saves the item to your My Items tab</h2>
+      <h2 class="card-text">The Save button below the silhouette saves the outfit to My Outfits</h2>
     </div>
   </div>
 
