--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -20,17 +20,16 @@
     <a href="javascript:void(0);">Sign out</a>
    </div>
    <div class="container-fluid">
-   <div class="container">
-   
- 
-   
+<div class="container">
       <form action="@routes.HomeController.approach1("a")">
       <div class="input-group stylish-input-group mt-2">
         <input type="search" class="form-control"  placeholder="Search by Item Name" onkeyup="myFunction()" name = "s" required>
         <span class="input-group-addon">
-            <button type="submit"></button> </span></div>
+            <button type="submit">
             </form>
                 <img src="@routes.Assets.versioned("images/search.png")" height="35" width="35">
+            </button>  
+        </span>
       </div>
    </div>
    <div class="card ml-3 mt-3 mr-2">
