--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -93,7 +93,7 @@
          <div class="col-sm-4 mb-5">
             <div class="card mr-5">
                <div class="text-center">
-                  <a href="#"><img src="@routes.Assets.versioned(item.getPicture())" height="200" width="200"></a>
+                  <a href="@routes.HomeController.details(item.getName())"><img src="@routes.Assets.versioned(item.getPicture())" height="200" width="200"></a>
                </div> 
                <div class="card-block">
                   <h4 class="card-title ml-2">@item.getName()</h4>
