--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -21,9 +21,6 @@
    </div>
    <div class="container-fluid">
    <div class="container">
-   
- 
-   
       <form action="@routes.HomeController.approach1("a")">
       <div class="input-group stylish-input-group mt-2">
         <input type="search" class="form-control"  placeholder="Search by Item Name" onkeyup="myFunction()" name = "s" required>
@@ -39,9 +36,9 @@
       <strong class="ml-3 mt-2">Category</strong>
       <select class="form-control mt-1 ml-3 category">
          <option>Hats</option>
-         <option>Shirts</option>
-         <option>Pants</option>
-         <option>Shoes</option>
+         <option>Tops</option>
+         <option>Bottoms</option>
+         <option>Footwear</option>
       </select>
         <div class="row mt-3 ml-3">
             <div class="col-md-4"><strong>Brand</strong></div>
