--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -21,7 +21,7 @@
    </div>
    <div class="container-fluid">
 <div class="container">
-      <form action="@routes.HomeController.approach1("a")">
+      <form action="@routes.HomeController.approach2("a")">
       <div class="input-group stylish-input-group mt-2">
         <input type="search" class="form-control"  placeholder="Search by Item Name" onkeyup="myFunction()" name = "s" required>
         <span class="input-group-addon">
@@ -107,6 +107,7 @@
 
 
 </main>
+<script>
 
 </body>
 
