--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -32,22 +32,12 @@
         </span>
       </div>
    </div>
-   <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
-   
+
    <div class="card ml-3 mt-3 mr-2">
       <strong class="ml-3 mt-2">Category</strong>
       <select class="form-control mt-1 ml-3 category">
-         <option value="@routes.HomeController.myOutfits()">Hats</option>
-         <option value="@routes.HomeController.myOutfits()">Tops</option>
+         <option>Hats</option>
+         <option>Tops</option>
          <option>Bottoms</option>
          <option>Footwear</option>
       </select>
