--- a/app/views/signUpPage.scala.html
+++ b/app/views/signUpPage.scala.html
@@ -43,11 +43,14 @@
 							
 								 <div class="submit">
 									<input type="submit" onclick="myFunction()" value="Create account" >
-									<input type="submit" onclick="myFunction()" value="Cancel" >
+									
 								</div>
 									<div class="clear"> </div>
 									
 							 </form>
+							 <a href="@routes.HomeController.signInPage()" >
+										<input type="submit" onclick="myFunction()" value="Cancel" >
+									</a>
 	
 	 
 </body>
