--- a/app/views/myOutfits.scala.html
+++ b/app/views/myOutfits.scala.html
@@ -18,7 +18,7 @@
 
   <div class="title">
     <h2>My Outfits</h2>
-    <a href="javascript:void(0);">Sign out</a>
+    <a href="@routes.HomeController.signInPage()">Sign out</a>
    </div>
    <div class="container-fluid">
    </div>
