--- a/app/views/recommend.scala.html
+++ b/app/views/recommend.scala.html
@@ -18,7 +18,7 @@
 
   <div class="title">
     <h2>Recommended</h2>
-    <a href="javascript:void(0);">Sign in</a>
+   <a href="@routes.HomeController.signInPage()">Sign out</a>
    </div>
    <div class="container-fluid">
    <div class="container">
