--- a/app/views/myItems.scala.html
+++ b/app/views/myItems.scala.html
@@ -17,7 +17,7 @@
 <main>
   <div class="title">
     <h2>My Items</h2>
-    <a href="javascript:void(0);">Sign out</a>
+<a href="@routes.HomeController.signInPage()">Sign out</a>
    </div>
    <div class="container-fluid">
 <div class="container">
