--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -17,7 +17,7 @@
 <main>
   <div class="title">
     <h2>Search</h2>
-    <a href="javascript:void(0);">Sign in</a>
+ <a href="@routes.HomeController.signInPage()">Sign out</a>
    </div>
    <div class="container-fluid">
    <div class="container">
