--- a/app/views/signInPage.scala.html
+++ b/app/views/signInPage.scala.html
@@ -10,9 +10,9 @@
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/button.css")">
 
 <div id="loginform">
-<div id="facebook"><i class="fa fa-facebook"></i><div id="connect">Connect with Facebook</div></div>
+<div id="facebook"><i class="fa fa-facebook"></i><div id="connect">Welcome To ULook!</div></div>
 <div id="mainlogin">
-<div id="or">or</div>
+<div id="or"></div>
 <h1>Log in with awesome new thing</h1>
 <form action="@routes.HomeController.signIn("a","b")">
 <input type="text" name = "name"placeholder="username or email" value="" required>
