--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -26,10 +26,10 @@
 
 <div class="text-center">
 <h1 class="card-title">Your Outfit Silhouette</h1>
-<a href="#"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/hatslot.jpg")" width="150"></a>
-<a href="#"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/shirtslot.jpg")"  width="200"></a>
-<a href="#"><img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/pantsslot.jpg")" width="150"></a>
-<a href="#"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/shoeslot.jpg")"  width="200"></a>
+<a href="@routes.HomeController.search("Hats")"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/hatslot.jpg")" width="150"></a>
+<a href="@routes.HomeController.search("Tops")"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/shirtslot.jpg")"  width="200"></a>
+<a href="@routes.HomeController.search("Bottoms")"><img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/pantsslot.jpg")" width="150"></a>
+<a href="@routes.HomeController.search("Shoes")"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/shoeslot.jpg")"  width="200"></a>
 </div> 
   </div>
   <div class="card ml-5 mr-5">
