Lots of small changes, detail pages etc

--- a/app/views/navigator.scala.html
+++ b/app/views/navigator.scala.html
@@ -8,7 +8,7 @@
         <a href="@routes.HomeController.getInspired()" data-title="Projects">Get Inspired!</a>
       </li>
       <li>
-        <a href="@routes.HomeController.recommend()" data-title="Team">Recommended</a>
+        <a href="@routes.HomeController.recommend()" data-title="Team">What's Hot?</a>
       </li>
       <li>
         <a href="@routes.HomeController.myItems()" data-title="Diary">My Items</a>
