--- a/app/views/recommend.scala.html
+++ b/app/views/recommend.scala.html
@@ -17,17 +17,17 @@
 <main>
 
   <div class="title">
-    <h2>Recommended</h2>
+    <h2>Popular</h2>
    <a href="@routes.HomeController.signInPage()">Sign out</a>
    </div>
    <div class="container-fluid">
    <div class="container">
 
-<p>
-<font size="10" face="Verdana">
+<h1 class="mt-3">
+<font size="9" face="Verdana">
 The Most popular Items
 </font>
-</p>
+</h1>
 
 
 
@@ -41,7 +41,7 @@ The Most popular Items
          <div class="col-sm-4 mb-5">
             <div class="card mr-5">
                <div class="text-center">
-                 <a href="#"><img src="@routes.Assets.versioned(item.getPicture())" height="200" width="200"></a>
+                 <a href="@routes.HomeController.details(item.getName())"><img src="@routes.Assets.versioned(item.getPicture())" height="200" width="200"></a>
                </div> 
                <div class="card-block">
                   <h4 class="card-title ml-2">@item.getName()</h4>
