--- a/app/views/detailPage.scala.html
+++ b/app/views/detailPage.scala.html
@@ -30,7 +30,7 @@
          <h1 class="card-title mt-2">Price $@item.getPrice</h1>
          <a href="#" class="btn btn-secondary">Add to Outfit</a>
          <a href="@routes.HomeController.addToFavourite(item.getName())" class="btn btn-success">Save</a>
-        
+         <a href="@item.getBrand()"><h1 class="card-title mt-2">Go to their website</h1></a>
    </div>
    
 
