--- a/app/views/myOutfits.scala.html
+++ b/app/views/myOutfits.scala.html
@@ -1,4 +1,4 @@
-@(occasion: List[String],outfits :List[Outfit])
+@(outfit: List[Item])
 <!DOCTYPE html>
 <html lang="en">
 <span class="bckg"></span>
@@ -26,24 +26,23 @@
 
    
       <div class="row mt-4 ml-5 mb-4 mr-1">
-       @for(outfit<- outfits){
+       
         <div class="col-sm-4 mb-5">
          <div class="card mr-5">
             <div class="text-center">
-               <a href="#"><img src="@routes.Assets.versioned(outfit.getHat())" height="120" width="120"></a>
-                  <a href="#"><img src="@routes.Assets.versioned(outfit.getTop())" height="120" width="120"></a>
-                  <a href="#"><img src="@routes.Assets.versioned(outfit.getBottom())" height="120" width="120"></a>
-                  <a href="#"><img src="@routes.Assets.versioned(outfit.getShoes())" height="120" width="120"></a>
+             @for(item <- outfit){
+               <a href="#"><img src="@routes.Assets.versioned(item.getPicture())" height="120" width="120"></a>
+            }
             </div> 
             <div class="card-block">
-               <h4 class="card-title ml-2">@outfit.getName()</h4>
+               <h4 class="card-title ml-2">Your Outfit</h4>
                <button type="button" class="btn btn-secondary ml-3">Edit</button>
                <button type="button" class="btn btn-danger float-right mr-2" >Delete</button>
             </div>
-            <a href="#" class="ml-2"><img src="@routes.Assets.versioned("images/share.png")" height="50" width="150"></a>
+            
          </div>
          </div>
-         }
+         
       </div>
 
 
