--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -25,7 +25,7 @@
   <div class="card ml-5 mr-5">
 
 <div class="text-center">
-<h1 class="card-title">Your Outfit Silhouette</h1>
+<h1 class="card-title">Search!</h1>
 <a href="@routes.HomeController.search("Hats")"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/hatslot.jpg")" width="150"></a>
 <a href="@routes.HomeController.search("Tops")"><img class="mt-2 mb-2" src="@routes.Assets.versioned("images/shirtslot.jpg")"  width="200"></a>
 <a href="@routes.HomeController.search("Bottoms")"><img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/pantsslot.jpg")" width="150"></a>
@@ -40,11 +40,11 @@
       <div class="text-center">
          <img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/add.jpg")" width="400"></a>
       </div>
-      <h2 class="card-text">The Add to Outfit button adds the Item to your custom silhouette in the sidebar</h2>
+      <h2 class="card-text">The Add to Outfit button adds the item to your cutom outfit in the My Outfit tab</h2>
             <div class="text-center">
          <img  class="mt-2 mb-2"src="@routes.Assets.versioned("images/help.png")" width="120"></a>
       </div>
-      <h2 class="card-text">The Save button below the silhouette saves the outfit to My Outfits</h2>
+      <h2 class="card-text">Click save to add the items to a collection of all your favourite items!</h2>
     </div>
   </div>
 
