--- a/app/views/navigator.scala.html
+++ b/app/views/navigator.scala.html
@@ -14,7 +14,7 @@
         <a href="@routes.HomeController.myItems()" data-title="Diary">My Items</a>
       </li>
       <li>
-        <a href="@routes.HomeController.myOutfits()" data-title="Timeline">My Outfits</a>
+        <a href="@routes.HomeController.myOutfits()" data-title="Timeline">My Outfit</a>
       </li>
       <li>
         <a href="@routes.HomeController.search()" data-title="Settings">Search</a>
