--- a/app/views/signInPage.scala.html
+++ b/app/views/signInPage.scala.html
@@ -13,7 +13,7 @@
 <div id="facebook"><i class="fa fa-facebook"></i><div id="connect">Welcome To ULook!</div></div>
 <div id="mainlogin">
 <div id="or"></div>
-<h1>Log in with awesome new thing</h1>
+<h1>Log in!</h1>
 <form action="@routes.HomeController.signIn("a","b")">
 <input type="text" name = "name"placeholder="username or email" value="" required>
 <input type="password" name = "password" placeholder="password" value="" required>
